// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props.nextStageAttempt is true 1`] = `
<div
  className="wrapper_input"
>
  <input
    className="FOO_CLASSNAME"
    data-hj-whitelist={true}
    disabled={false}
    min="FOO_MIN"
    name="FOO_NAME"
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="FOO_PLACEHOLDER"
    style={
      Object {
        "background": "rgba(232, 114, 88, 0.3)",
        "borderColor": "rgba(232, 114, 88, 0.01)",
        "boxSizing": "border-box",
        "color": "rgba(211, 104, 80, 1)",
        "height": "100%",
        "width": "100%",
      }
    }
    type="FOO_TYPE"
  />
  <span
    className="error_message"
    style={Object {}}
  />
</div>
`;

exports[`shallow render 1`] = `
<div
  className="wrapper_input"
>
  <input
    className="FOO_CLASSNAME"
    data-hj-whitelist={true}
    disabled={false}
    min="FOO_MIN"
    name="FOO_NAME"
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="FOO_PLACEHOLDER"
    style={
      Object {
        "boxSizing": "border-box",
        "height": "100%",
        "width": "100%",
      }
    }
    type="FOO_TYPE"
  />
  <span
    className="error_message"
    style={Object {}}
  />
</div>
`;
